--- a/css/styles.css
+++ b/css/styles.css
@@ -221,3 +221,23 @@
 .btn-close-white {
   filter: invert(1);
 }
+
+#topBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #555;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+#topBtn:hover {
+  background-color: #333;
+}
